Fix sidebar default setting (Visivle => Invisible), Hide Searchbar on Default page by using JS, Create searchbar on default page

--- a/config/static/styles/style.css
+++ b/config/static/styles/style.css
@@ -4,13 +4,14 @@
 /*}*/
 
 /* Default Layout */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 html{
   background-color :rgb(255, 255, 255);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vmax;
+  height: 100%;
 }
 
 body {
@@ -21,7 +22,7 @@ body {
 
     /*background-size: auto;*/
 
-    height: 80vmax;
+    height: 80%;
     width: 100%;
     font-family: 'Source Sans Pro', sans-serif;
 
@@ -34,15 +35,14 @@ body {
     align-items: stretch;
 }
 
-
 #basement{
     height:auto;
     min-height: 100%;
-    padding-bottom: 10vh;
+    padding-bottom: 10%;
 }
 
 footer{
-    height: 10vh;
+    height: 10%;
     position: relative;
     transform: translateY(-100%);
 }
@@ -51,14 +51,13 @@ footer{
 /*Media Query*/
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        margin-left: 0;
     }
     #sidebar.active {
-        margin-left: 0;
+        margin-left: -250px;
     }
 }
 
-/*Test*/
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
@@ -85,22 +84,16 @@ a[data-toggle="collapse"] {
     transform: translateY(-50%);
 }
 
-.wrapper {
-    display: flex;
-    align-items: stretch;
-}
+
 
 #sidebar {
+    padding-top: 112px;
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    margin-left: -250px;
+    background: #FFFFFF;
     color: #fff;
     transition: all 0.3s;
-}
-
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
 }
 
 #sidebar ul.components {
@@ -109,7 +102,7 @@ a[data-toggle="collapse"] {
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: 0px;
 }
 
 #sidebar ul p {
@@ -134,9 +127,23 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #FFFFFF;
+}
+/* Default Search Bar */
+
+#default-searchbar{
+  /*  position: absolute;*/
+  /*top: 30%;*/
+  /*left: 50%;*/
+  /*transform: translate(-50%,-50%);*/
 }
 
+.wrap-searchbar{
+  position: absolute;
+  top: 30%;
+  /*transform: translate(-50%,-50%);*/
+  width: 100%;
+}
 
 /*---------*/
 
@@ -149,47 +156,30 @@ ul ul a {
     align-items: center;
     justify-content: center;
 }
+
 .topbar {
     position: fixed;
-    height: 100px;
-    width: 100vw;
-    /*top: 0;*/
-    /* width: 100% */
-    /*left: 0;*/
-    /*right: 0;*/
+    height: 112px;
+    width: 100%;
 }
 
 .p-t-10{
-    padding-top: 10vh;
+    padding-top: 10px;
+}
+
+.p-r-10{
+    padding-right: 5px;
 }
 
 .content-bar{
-    height: 70vh;
-    width: 100vw;
+    padding-top: 112px;
+    height: 70%;
+    width: 100%;
 }
 
 .navbar {
     background-color: #e3f2fd;
 }
-
-
-
-/*.sidebar {*/
-/*    font-family: 'Oxygen', sans-serif;*/
-/*    position: fixed;*/
-/*    !*margin-top: 50px;*!*/
-/*    width: 25vw;*/
-/*    min-width: 200px;*/
-/*    height: 80%;*/
-/*    background-color: #002554;*/
-/*    !*padding: 30px 0;*!*/
-/*    padding-top: 20vh;*/
-
-/*}*/
-
-
-/* Default Layout */
-
 
 .sidebar h4 {
     color: white;
